<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2015 Fabio Collini.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <item name="bound_observable" type="id"/>

    <string name="app_name">Demo mv2m</string>
    <string name="mandatory_field">Mandatory field</string>
    <string name="note_saved">Note saved</string>
    <string name="error_loading_list">Error loading notes</string>
    <string name="error_loading_note">Error loading note</string>
    <string name="error_saving_note">error saving note</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="loading">Loading...</string>
    <string name="retry">Retry</string>
    <string name="new_note">New note</string>

    <string name="conversion_error">Conversion error</string>
    <string name="error_loading_rate">Error loading rate</string>
    <string name="convert">Convert</string>

</resources>